# zephyr-template

./: README.md  platformio.ini
boards/: zephyr_template_board.json
include/: Params.h  params.h  params_dac.h  thd_0.h  thd_1.h  thd_i2c.h
src/: _start_threads.c  main.c  thd_0.c  thd_1.c  thd_i2c.c
zephyr/: CMakeLists.txt  Kconfig  prj.conf
zephyr/boards/: nucleo_f411re.overlay  stm32_min_dev_black.overlay  zephyr_template_board.overlay
zephyr/boards/arm/zephyr_template_board/: Kconfig.board  Kconfig.defconfig  board.cmake  zephyr_template_board.dts  zephyr_template_board.yaml  zephyr_template_board_defconfig
